Fixes header text wrapping issues on small and medium widths. Fixes text logo display and container height issues on login/logout screens.

--- a/frontend/src/app/header/header.component.scss
+++ b/frontend/src/app/header/header.component.scss
@@ -111,7 +111,9 @@
       height: $search-bar-height-lg;
     }
 
-    p {
+    p.tagline {
+      font-style: italic;
+
       // SM
       @media (max-width: 959px) {
         justify-self: center;
